# Repose

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt
Source/Client/Config/: CMakeLists.txt
Source/Client/Config/Private/: ProjectConfig.cpp  ProjectUserConfig.cpp
Source/Client/Config/Public/: ProjectConfig.h  ProjectUserConfig.h
Source/Client/Launch/: CMakeLists.txt
Source/Client/Launch/Private/: main.cpp
Source/Client/Network/: CMakeLists.txt
Source/Client/Network/Private/: MessageProcessorExtension.cpp
Source/Client/Network/Public/: MessageProcessorExtension.h
Source/Client/Renderer/: CMakeLists.txt
Source/Client/Renderer/Private/: RendererExtension.cpp
Source/Client/Renderer/Public/: RendererExtension.h
Source/Client/Simulation/: CMakeLists.txt
Source/Client/Simulation/Private/: AnimationSystem.cpp  SimulationExtension.cpp
Source/Client/Simulation/Public/: AnimationSystem.h  SimulationExtension.h
Source/Client/UserInterface/: CMakeLists.txt
Source/Client/UserInterface/Private/: InteractionManager.cpp  MainScreen.cpp  TitleScreen.cpp  UserInterfaceExtension.cpp  ViewModel.cpp  WorldSinks.cpp
Source/Client/UserInterface/Private/BuildTools/: BuildTool.cpp  DynamicObjectTool.cpp  EntityTool.cpp  FloorCoveringTool.cpp  FloorTool.cpp  ObjectTool.cpp  RemoveTool.cpp  StaticObjectTool.cpp  TerrainTool.cpp  WallTool.cpp
Source/Client/UserInterface/Private/Widgets/: BuildModeThumbnail.cpp  DynamicObjectPanelContent.cpp  EntityPanelContent.cpp  ItemPanelContent.cpp  ItemThumbnail.cpp  MainButton.cpp  MainThumbnail.cpp  TitleButton.cpp  TitleTextInput.cpp
Source/Client/UserInterface/Private/Windows/: BuildOverlay.cpp  BuildPanel.cpp  ChatWindow.cpp  DialogueWindow.cpp  HotbarWindow.cpp  InventoryWindow.cpp  MainOverlay.cpp  RightClickMenu.cpp  TitleWindow.cpp  TooltipWindow.cpp
Source/Client/UserInterface/Public/: BuildModeType.h  DisplayStrings.h  DragDropData.h  InteractionHelpers.h  InteractionManager.h  MainScreen.h  TitleScreen.h  UserInterfaceExtension.h  ViewModel.h  WorldSinks.h
Source/Client/UserInterface/Public/BuildTools/: BuildTool.h  DynamicObjectTool.h  EntityTool.h  FloorCoveringTool.h  FloorTool.h  ObjectTool.h  RemoveTool.h  StaticObjectTool.h  TerrainTool.h  WallTool.h
Source/Client/UserInterface/Public/Widgets/: BuildModeThumbnail.h  DynamicObjectPanelContent.h  EntityPanelContent.h  ItemPanelContent.h  ItemThumbnail.h  MainButton.h  MainThumbnail.h  TitleButton.h  TitleTextInput.h
Source/Client/UserInterface/Public/Windows/: BuildOverlay.h  BuildPanel.h  ChatWindow.h  DialogueWindow.h  HotbarWindow.h  InventoryWindow.h  MainOverlay.h  RightClickMenu.h  TitleWindow.h  TooltipWindow.h
Source/ConfigOverrides/Override/: ClientConfig.h  EntityInteractionType.h  ItemInteractionType.h  ItemProperties.h  ProjectComponentLists.h  ServerConfig.h  SharedConfig.h
Source/ConfigOverrides/Override/TypeLists/: ProjectAITypes.h  ProjectObservedComponentTypes.h  ProjectPersistedComponentTypes.h  ProjectReplicatedComponentTypes.h
Source/EngineSupplement/: CMakeLists.txt  README.md
Source/EngineSupplement/Client/: CMakeLists.txt
Source/EngineSupplement/Client/Config/Public/: Config.h
Source/EngineSupplement/Server/: CMakeLists.txt
Source/EngineSupplement/Server/Config/Public/: Config.h
Source/EngineSupplement/Server/Simulation/: CMakeLists.txt
Source/EngineSupplement/Shared/: CMakeLists.txt
Source/EngineSupplement/Shared/Config/Public/: SharedConfig.h
Source/EngineSupplement/Shared/Simulation/: CMakeLists.txt
Source/EngineSupplement/Shared/Simulation/Public/: EntityGraphicDisplayData.h  EntityGraphicType.h  EntityInteractionDisplayData.h  EntityInteractionType.h  ItemInteractionDisplayData.h  ItemInteractionType.h  ItemProperties.h
Source/EngineSupplement/Shared/UserInterface/: CMakeLists.txt
Source/EngineSupplement/Shared/UserInterface/Public/: DisplayStrings.h
Source/Server/: CMakeLists.txt
Source/Server/Config/: CMakeLists.txt
Source/Server/Config/Private/: ProjectConfig.cpp  ProjectUserConfig.cpp
Source/Server/Config/Public/: ProjectConfig.h  ProjectUserConfig.h
Source/Server/Launch/: CMakeLists.txt
Source/Server/Launch/Private/: main.cpp
Source/Server/Network/: CMakeLists.txt
Source/Server/Network/Private/: MessageProcessorExtension.cpp
Source/Server/Network/Public/: MessageProcessorExtension.h
Source/Server/Simulation/: CMakeLists.txt
Source/Server/Simulation/Private/: BuildModeDataSystem.cpp  BuildModeEntityToolSystem.cpp  EntityBuildModeSystem.cpp  MazeGenerationSystem.cpp  PlantSystem.cpp  ProjectLuaBindings.cpp  SimulationExtension.cpp  TeleportSystem.cpp
Source/Server/Simulation/Public/: BuildModeDataSystem.h  BuildModeEntityToolSystem.h  EntityBuildModeSystem.h  MazeCell.h  MazeGenerationSystem.h  MazeTopology.h  Plant.h  PlantRegion.h  PlantSystem.h  ProjectLuaBindings.h  SimulationExtension.h  TeleportSystem.h
Source/Shared/: CMakeLists.txt
Source/Shared/Config/: CMakeLists.txt
Source/Shared/Config/Private/: ProjectSharedConfig.cpp
Source/Shared/Config/Public/: ProjectSharedConfig.h
Source/Shared/Messages/: CMakeLists.txt
Source/Shared/Messages/Public/: AddEntityTemplate.h  DynamicObjectTemplates.h  DynamicObjectTemplatesRequest.h  EntityTemplates.h  EntityTemplatesRequest.h  ProjectMessageType.h
Source/Shared/Simulation/: CMakeLists.txt
Source/Shared/Simulation/Public/: BuildModeDefs.h  ProjectInteractionType.h
Source/Tools/: CMakeLists.txt
Source/Tools/GenerateMap/: CMakeLists.txt
Source/Tools/GenerateMap/Private/: GenerateMapMain.cpp  MapGenerator.cpp  MapGenerator.h
Source/Tools/Map0To1/: CMakeLists.txt
Source/Tools/Map0To1/Private/: Map0To1Main.cpp  OldChunkSnapshot.h  OldTileMapSnapshot.h  OldTileSnapshot.h
Source/Tools/MapGenerator/: CMakeLists.txt
Source/Tools/MapGenerator/Private/: MapGenerator.cpp
Source/Tools/ReplaceMapSpriteID/: CMakeLists.txt
Source/Tools/ReplaceMapSpriteID/Private/: ReplaceMapSpriteIDMain.cpp
(+41 files in other folders)
